로그인 체크 추가

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-SECRET_KEY=z6qP9DfhYrh8rIKHuQOCI-Bh76tnRSazCsvCLitax_WeSGGe0biF1ADxlHjzLRE8lY-ktit_NNRVmx0CJ2pFHQ
 # 아래 SECRET_KEY 생성 방밥
 # python -c "import secrets; print(secrets.token_urlsafe(64))"
+SECRET_KEY=z6qP9DfhYrh8rIKHuQOCI-Bh76tnRSazCsvCLitax_WeSGGe0biF1ADxlHjzLRE8lY-ktit_NNRVmx0CJ2pFHQ
+ACCESS_TOKEN_EXPIRE_MINUTES=10
+REFRESH_TOKEN_EXPIRE_DAYS=1
+LOCKOUT_THRESHOLD=3
+LOCKOUT_MINUTES=5
+DATABASE_URL=postgresql+psycopg2://postgres:asdf1234@192.168.50.81:5432/fund_risk_mng
